fixed block preview style, fixed overflow in hero

--- a/frontend/resources/sass/pages/_block-preview.scss
+++ b/frontend/resources/sass/pages/_block-preview.scss
@@ -14,7 +14,8 @@
 	div[class^="gl-b-"],
 	section[class^="gl-b-"] {
 		display: block;
-		border: 1px solid $gray-70;
+		border: 1.5px solid $gray-70;
+		border-radius: 8px;
 	}
 
 	.nav-in-hero {
